--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="topnav">
+        <a href="#about">Contact</a>
+        <a href="#contact">Socials</a>
+        <a href="/gcf.html">Girls(code).fest</a>
         <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
     </div>
     <div>
         <img src="/images/background.jpg" alt="Photo by Lindsey LaMont on Unsplash">
