--- a/gcf.html
+++ b/gcf.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>FEMILY</title>
 </head>
 <body>
-    <img src="/images/gcf.jpg" alt="Girls Code Fest">
+    <div class="topnav">
+        <a href="#about">Contact</a>
+        <a href="#contact">Socials</a>
+        <a class="active" href="/gcf.html">Girls(code).fest</a>
+        <a href="/index.html">Home</a>
+    </div>
+    <div>
+        <img src="/images/gcf.png" alt="Girls Code Fest">
+    </div>
 </body>
 </html>
