--- a/gcf.html
+++ b/gcf.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <title>FEMILY</title>
+    <link rel="icon" href="/images/letter_logo.jpg">
 </head>
 <body>
-    <div class="topnav">
+    <div id="navbar">
         <a href="#about">Contact</a>
         <a href="#contact">Socials</a>
         <a class="active" href="/gcf.html">Girls(code).fest</a>
