--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <title>FEMILY</title>
+    <link rel="icon" href="/images/letter_logo.jpg">
 </head>
 <body>
-    <div class="topnav">
+    <div id="navbar">
         <a href="#about">Contact</a>
         <a href="#contact">Socials</a>
         <a href="/gcf.html">Girls(code).fest</a>
         <a class="active" href="#home">Home</a>
     </div>
-    <div>
-        <img src="/images/background.jpg" alt="Photo by Lindsey LaMont on Unsplash">
-    </div>
+    <img src="/images/background.jpg" alt="Photo by Lindsey LaMont on Unsplash">
 </body>
 </html>
