--- a/gcf.html
+++ b/gcf.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/images/letter_logo.jpg">
 </head>
 <body>
-    <div id="navbar">
+    <div id="navbar" style="margin: 15px;">
         <a href="#about">Contact</a>
-        <a href="#contact">Socials</a>
         <a class="active" href="/gcf.html">Girls(code).fest</a>
         <a href="/index.html">Home</a>
+        <img src="/images/nav_logo.png" alt="Logo" style="height:30px; float:left; margin-top: 10px;">
     </div>
     <div>
         <img src="/images/gcf.png" alt="Girls Code Fest">
