--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/images/letter_logo.jpg">
 </head>
 <body>
-    <div id="navbar">
+    <div id="navbar" style="margin: 15px;">
         <a href="#about">Contact</a>
-        <a href="#contact">Socials</a>
         <a href="/gcf.html">Girls(code).fest</a>
         <a class="active" href="#home">Home</a>
+        <img src="/images/nav_logo.png" alt="Logo" style="height:30px; float:left; margin-top: 10px;">
     </div>
     <img src="/images/background.jpg" alt="Photo by Lindsey LaMont on Unsplash">
 </body>
